@@ -47,6 +47,50 @@ sub _description
     return $description;
 }
 
+# Method: precondition
+#
+# Check if the module is configured
+#
+# Overrides:
+#
+# <EBox::Model::Base::precondition>
+#
+sub precondition
+{
+    my ($self) = @_;
+    my $parentModule = $self->parentModule();
+
+    if (not $parentModule->configured()) {
+        $self->{preconditionFailMsg} = __('You must enable and save the module Users in the module status section in order to use it.');
+        return 0;
+    }
+
+    if ($parentModule->mode() ne $parentModule->EXTERNAL_AD_MODE()) {
+        return 1;
+    }
+
+    if ($parentModule->needsSaveAfterConfig()) {
+        $self->{preconditionFailMsg} = __('You must save the module Users in the module status section in order to use it.');
+        return 0;
+    }
+
+    return 1;
+}
+
+# Method: preconditionFailMsg
+#
+# Check if the module is configured
+#
+# Overrides:
+#
+# <EBox::Model::Model::preconditionFailMsg>
+#
+sub preconditionFailMsg
+{
+    my ($self) = @_;
+    return $self->{preconditionFailMsg};
+}
+
 sub pageTitle
 {
     return __('LDAP Settings');
@@ -56,5 +100,6 @@ sub menuFolder
 {
     return 'Users';
 }
+
 
 1;
