@@ -1,3 +1,6 @@
+HEAD
+	+ Added necessay preconditions for external AD mode and hid user
+	  template menu entry in that mode
 3.2.10
 	+ Added and used checkMailNotInUse method
 3.2.9
